--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -2,5 +2,13 @@
     "terminal.integrated.env.linux": {
         "PATH": "/home/norbi/.platformio/penv/bin:/home/norbi/.platformio/penv:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin",
         "PLATFORMIO_CALLER": "vscode"
+    },
+    "files.associations": {
+        "array": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "initializer_list": "cpp"
     }
 }
