--- a/client/platformio.ini
+++ b/client/platformio.ini
@@ -9,8 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
+extra_scripts = pre:extra.py
 platform = espressif8266
 board = esp12e
 framework = arduino
 board_build.f_cpu = 160000000L
 upload_speed = 230400
+
+;targets = upload, monitor
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
