--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -12,5 +12,6 @@
         "initializer_list": "cpp",
         "functional": "cpp",
         "type_traits": "cpp"
-    }
+    },
+    "python.pythonPath": "/usr/bin/python3"
 }
