--- a/client/platformio.ini
+++ b/client/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
-extra_scripts = pre:extra.py
+extra_scripts = pre:/media/norbi/Adat/extra.py
 platform = espressif8266
 board = esp12e
 framework = arduino
