fixed issue caused by bracket in main.c, clien version changed to v1.68. Certificate generator commands fixed. PHP update script log file moved and added some other log cases.

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -11,7 +11,8 @@
         "vector": "cpp",
         "initializer_list": "cpp",
         "functional": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "sstream": "cpp"
     },
     "python.pythonPath": "/usr/bin/python3"
 }
