--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ server_on_ubuntu/server/webpage/www/html/esp/update/log/**
 server_on_ubuntu/server/webpage/www/html/esp/update/bin/**
 server_on_ubuntu/server/old_mysql_database_2020.3.29/**
 
+#certificates
+*/certificates.h
+
 # keys, certificates
 *.crt
 *.csr
@@ -35,3 +38,5 @@ server_on_ubuntu/server/old_mysql_database_2020.3.29/**
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+.pio/*
+
