--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "initializer_list": "cpp",
         "functional": "cpp",
         "type_traits": "cpp",
-        "sstream": "cpp"
-    },
-    "python.pythonPath": "/usr/bin/python3"
+        "sstream": "cpp",
+        "*.tcc": "cpp"
+    }
 }
