--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
+[env:esp32]
 extra_scripts = pre:/media/norbi/Adat/extra.py
-platform = espressif8266
-board = esp12e
+platform = espressif32
+board = esp32cam
 framework = arduino
 board_build.f_cpu = 160000000L
-upload_speed = 230400
+upload_speed = 115200
 
 
 ;targets = upload, monitor
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
+
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  knolleary/PubSubClient @ ^2.8
+  mahfuz195/BMP280 @ ^1.0.0
+	alanswx/ESPAsyncWiFiManager @ 0.23
+  me-no-dev/ESP Async WebServer @ 1.2.3
