Porting code to ESP32, still very messy, unusable code, worked on TLS.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "functional": "cpp",
         "type_traits": "cpp",
         "sstream": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "regex": "cpp"
     }
 }
