--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,11 @@ upload_speed = 230400
 ;targets = upload, monitor
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
+
+lib_deps =
+    # The exact version
+    tzapu/WiFiManager @ 0.16.0
+    mahfuz195/BMP280 @ 1.0.0
+    knolleary/PubSubClient @ 2.8
+    adafruit/Adafruit Unified Sensor @ 1.1.4
+
