--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32]
-extra_scripts = pre:/media/norbi/Adat/extra.py
 platform = espressif32
 board = esp32cam
 framework = arduino
 board_build.f_cpu = 160000000L
 upload_speed = 230400
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+
+
+build_flags = -DCORE_DEBUG_LEVEL=5
 
 
 ;targets = upload, monitor
