Porting code to ESP32, completed update from server, the built binary gets the newest version name.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,16 +10,14 @@
 
 [env:esp32]
 platform = espressif32
-board = esp32cam
+board = esp32dev
 framework = arduino
 board_build.f_cpu = 160000000L
 upload_speed = 230400
-platform_packages =
-    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-
-
-build_flags = -DCORE_DEBUG_LEVEL=5
-
+#platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#1.0.2
+build_flags   = '-D VERSION="Testv2.02"'
+                -DCORE_DEBUG_LEVEL=5
+            #-D BUILD_ENV_NAME=$PIOENV
 
 ;targets = upload, monitor
 monitor_speed = 115200
@@ -27,7 +25,10 @@ monitor_speed = 115200
 lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
-  knolleary/PubSubClient @ ^2.8
-  mahfuz195/BMP280 @ ^1.0.0
+  knolleary/PubSubClient @ 2.8
+  mahfuz195/BMP280 @ 1.0.0
 	alanswx/ESPAsyncWiFiManager @ 0.23
   me-no-dev/ESP Async WebServer @ 1.2.3
+
+extra_scripts =
+  pre:extra.py
