Porting code to ESP32, moving some code to OOP code.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,12 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 board_build.f_cpu = 160000000L
-upload_speed = 230400
+upload_speed = 921600 #230400
 #platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#1.0.2
 build_flags   = '-D VERSION="Testv2.02"'
-                -DCORE_DEBUG_LEVEL=5
-            #-D BUILD_ENV_NAME=$PIOENV
+#                -DCORE_DEBUG_LEVEL=5
 
-;targets = upload, monitor
+#targets = upload, monitor
 monitor_speed = 115200
 
 lib_deps =
