--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ board_build.f_cpu = 160000000L
 upload_speed = 921600 #230400
 #platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#1.0.2
 build_flags   = '-D VERSION="Testv2.02"'
-#                -DCORE_DEBUG_LEVEL=5
+                -DCORE_DEBUG_LEVEL=5
 
 #targets = upload, monitor
 monitor_speed = 115200
